--- a/dataTable.html
+++ b/dataTable.html
@@ -266,7 +266,7 @@
                 </div>
             </form>
         </div>
-
+        <script src="dropdown.js"></script>
         <script src="sortDataTable.js"></script>
         <script src="addDataTableColumnBtn.js"></script>
         <script src="modal.js"></script>
