--- a/dataTable.html
+++ b/dataTable.html
@@ -177,8 +177,7 @@
                                 <th class="tblColText">Product Type</th>
                                 <th class="tblColText">Shipping Rates</th>
                                 <th class="tblColText">Refill Limit</th>
-                                <th class="tblColText">Product Location
-                                    Address</th>
+                                <th class="tblColText">Product Location</th>
                                 <th colspan="2" class="tblColText">Action</th>
                             </tr>
                         </thead>
@@ -255,7 +254,7 @@
                         <input type="text" required id="rLimit">
                     </div>
                     <div class="input-box">
-                        <label for="pLocation">Product Location Address</label>
+                        <label for="pLocation">Product Location</label>
                         <input type="text" required id="pLocation">
                     </div>
                     <div class="input-box">
